tests/snapshots/integration__git_remote.snap
---
source: tests/lib.rs
assertion_line: 37
expression: output

---
RUN
git push -h

STDOUT
exit 1

STDERR
git-push 
Update remote refs along with associated objects

USAGE:
    git push <repository> <refspec>...

ARGS:
    <repository>    The "remote" repository that is destination of a push operation.
    <refspec>...    Specify what destination ref to update with what source object.

OPTIONS:
    -h, --help    Print help information


